--- a/notebooks/aider_swe_bench_colab_ollama.ipynb
+++ b/notebooks/aider_swe_bench_colab_ollama.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPJchC/hei5PiVk0sKx2aqN",
+      "authorship_tag": "ABX9TyPeVPf4d5aB5STbRXo9qAhZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2456,6 +2456,19 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture out\n",
+        "\n",
+        "!ollama pull $model_name"
+      ],
+      "metadata": {
+        "id": "qvbRGBN6HHy-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
