Add instance filtering example.  Did first two of psf/requests already (can't wait for rest to finish right now).

--- a/notebooks/aider_swe_bench_colab_ollama.ipynb
+++ b/notebooks/aider_swe_bench_colab_ollama.ipynb
@@ -7,7 +7,7 @@
       "machine_shape": "hm",
       "gpuType": "T4",
       "mount_file_id": "https://github.com/fovi-llc/aider-swe-bench/blob/main/notebooks/aider_swe_bench_colab_ollama.ipynb",
-      "authorship_tag": "ABX9TyPqDNghIJNiMy0pocc8Wz2X",
+      "authorship_tag": "ABX9TyM6Hj1fBMrg8yF4xDLgmRe/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2479,11 +2479,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "oBim_AxCXMuF",
-        "outputId": "f8a515b2-7a65-439f-edcb-9eaa60e55557",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oBim_AxCXMuF",
+        "outputId": "f8a515b2-7a65-439f-edcb-9eaa60e55557"
       },
       "execution_count": 10,
       "outputs": [
@@ -4803,6 +4803,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## One one or more specific instances.\n",
+        "\n",
+        "See below for using regex to match multiple instances."
+      ],
+      "metadata": {
+        "id": "RaC583qyZK2B"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%capture out\n",
@@ -5188,6 +5199,41 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Run for all instances that start with \"psf\""
+      ],
+      "metadata": {
+        "id": "Y9KjBITPZDJO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture out\n",
+        "\n",
+        "%cd /content/aider-swe-bench\n",
+        "\n",
+        "!su user --preserve-environment --command \"python harness.py -f ^psf\""
+      ],
+      "metadata": {
+        "id": "cTe8ZxDMYGbu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out.show()"
+      ],
+      "metadata": {
+        "id": "r3TqqO4GY94T"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
