Add a few comments for context since I shared this very drafty experimental WIP on LinkedIn.

--- a/notebooks/aider_swe_bench_colab_ollama.ipynb
+++ b/notebooks/aider_swe_bench_colab_ollama.ipynb
@@ -7,7 +7,7 @@
       "machine_shape": "hm",
       "gpuType": "L4",
       "mount_file_id": "https://github.com/fovi-llc/aider-swe-bench/blob/main/notebooks/aider_swe_bench_colab_ollama.ipynb",
-      "authorship_tag": "ABX9TyNtWeV/2IYF1I2xQbqNBEJ1",
+      "authorship_tag": "ABX9TyOvJUCQVwVCuubdU+X5IExK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1747,6 +1747,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Eyes on the K-prize\n",
+        "\n",
+        "* Jim White\n",
+        "* https://www.linkedin.com/in/jamespaulwhite/\n",
+        "\n",
+        "This is an experimental notebook to figure out how to run SWE-bench tests in a Colab environment as a step towards running in the Kaggle environment for the K-prize (https://kprize.ai/).  K-prize conditions mean no Docker container execution and no Internet access which also means open local models.\n",
+        "\n",
+        "I've started with `aider-swe-bench` (https://github.com/Aider-AI/aider-swe-bench) and tried several of the latest small open LLMs via Ollama (https://ollama.com/library/mistral-small:latest).  Best results so far (which appear to be very, very good unless I've done something wrong or don't know how to interpret the results) are with Mistral Small 3 (https://mistral.ai/news/mistral-small-3/) at around 50% on the Lite subset (first run still in progress).\n",
+        "\n",
+        "If this looks interesting then join in the fun!  Sign up for the K-prize competition on Kaggle (https://www.kaggle.com/competitions/konwinski-prize/overview) and hop into their Discord."
+      ],
+      "metadata": {
+        "id": "ql3mKsdeUtaX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Have to use an older version of Aider because something has changed in `Coder.create` because we get this error with current versions:\n",
         "\n",
         "```\n",
@@ -3188,7 +3206,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Run the whole test suite - lite to start with of course"
+        "# Run the whole test suite - Lite to start with of course\n",
+        "\n",
+        "There are 300 instances in Lite and on a T4 looks like it would take at least 36 hours to run (attempting only one model config and no retries).  An L4 is about 2.5X faster and so switched to that so the run can be done in a day."
       ],
       "metadata": {
         "id": "QUkSjljd6VN0"
@@ -3197,7 +3217,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Copy predictions that are already done."
+        "## Copy predictions that are already done.\n",
+        "\n",
+        "The harness will skip instances that are already done but it can't access the Drive folder (because that is `root` and the harness runs as `user`)."
       ],
       "metadata": {
         "id": "6yqBmr0OEN_7"
